@@ -1,6 +1,8 @@
 Changes in 3.0.2
 ================
 * FIX: "path" parameter value may contain symlink.
+* FIX: "basedir regex" was never able to treat symlink.
+       If /home -> /usr/home, set "basedir regex = /usr/home".
 
 Changes in 3.0.1
 ================
